k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filippomoscatelli-cv-service
  namespace: default
  labels:
    app: filippomoscatelli-cv
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: filippomoscatelli-cv
